--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         Descripción:
     </h1>
     <p>
-        Esta es una página de prueba para Pipeline prueba 
+        Esta es una página de prueba para Pipeline prueb
     </p>
     
 </body>
